--- a/w3-total-cache.conf
+++ b/w3-total-cache.conf
@@ -1,9 +1,10 @@
 # BEGIN W3TC Minify core
+
 rewrite ^/wp-content/w3tc/min/w3tc_rewrite_test$ /wp-content/w3tc/min/index.php?w3tc_rewrite_test=1 last;
 rewrite ^/wp-content/w3tc/min/(.+\.(css|js))$ /wp-content/w3tc/min/index.php?file=$1 last;
 # END W3TC Minify core
  
-BEGIN W3TC Minify cache
+#BEGIN W3TC Minify cache
 location ~ /wp-content/w3tc/min.*\.js$ {
     types {}
     default_type application/x-javascript;
